# passman-android

./: .gitignore  .gitignore.orig  .gitmodules  FAQ.md  Openssl.conf.sample  PRIVACY.md  README.md  SetupOpenssl.sh  build-openssl.sh  build.gradle  gradle.properties  gradle.properties.example  openssl.conf.example
.tx/: config  (+1 more)
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SJCL.cpp  SJCL.h  base64.cpp  base64.h  passman-lib.cpp
app/src/main/res/anim/: scanner.xml
app/src/main/res/drawable/: ic_baseline_expand_more_24.xml  ic_baseline_list_24.xml  ic_baseline_logout_24_grey.xml  ic_baseline_open_in_new_grey.xml  ic_baseline_qr_code_scanner_24.xml  ic_baseline_refresh_24.xml  ic_baseline_share_24.xml  ic_baseline_sort_by_alpha_24.xml  login_decision_button.xml  splash.xml
app/src/main/res/layout/: activity_autofill_interaction.xml  activity_login.xml  activity_password_list.xml  activity_scan_qrcode.xml  activity_splash.xml  autofill_list_item.xml  autofill_list_item_with_icon.xml  content_legacy_login.xml  content_login.xml  content_manual_server_connection_settings.xml  content_otp_edit.xml  content_otp_progress.xml  content_password_list.xml  content_sso_settings.xml  fragment_copy_text_item.xml  fragment_credential_add.xml  fragment_credential_create.xml  fragment_credential_custom_field_item.xml  fragment_credential_display.xml  fragment_credential_edit.xml  fragment_credential_file_item.xml  fragment_credential_item.xml  fragment_credential_item_list.xml  fragment_edit_password_text_item.xml  fragment_settings.xml  fragment_vault.xml  fragment_vault_add.xml  fragment_vault_delete.xml  fragment_vault_edit.xml  fragment_vault_list.xml  fragment_vault_lock_screen.xml  layout_lock_countdown.xml  login_list_item.xml  progress_dialog.xml
app/src/main/res/layout-land/: content_legacy_login.xml  content_login.xml
app/src/main/res/menu/: menu_credential_display.xml  menu_credential_item_fragment.xml  menu_password_list.xml
app/src/main/res/values-af/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-ast/: strings.xml
app/src/main/res/values-bg-rBG/: strings.xml
app/src/main/res/values-br/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs-rCZ/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-de-rDE/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-en-rGB/: strings.xml
app/src/main/res/values-eo/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rAR/: strings.xml
app/src/main/res/values-es-rCO/: strings.xml
app/src/main/res/values-es-rEC/: strings.xml
app/src/main/res/values-es-rMX/: strings.xml
app/src/main/res/values-es-rNI/: strings.xml
app/src/main/res/values-es-rPY/: strings.xml
app/src/main/res/values-et-rEE/: strings.xml
app/src/main/res/values-eu/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi-rFI/: strings.xml
app/src/main/res/values-fr/: strings.xml
(+170 files in other folders)
